Include the missing c3_conf_manager in the Makefile.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7722 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 5217781c0307a7ecbe7272c3b49d76e37318e2b9

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -5,8 +5,9 @@ SCRIPTS := create_and_populate_basic_node_info distro-query get_arch \
 		integrate_image mac_collector macinfo2sis OCA-driver opd oscar \
 		oscar-config oscar_image_cleanup oscar_sanity_check oscar_wizard \
 		ping_clients post_clients post_install post_rpm_install prepare_repos \
-        prep_oscar_repos repo-update set_node_nics set_oscar_interface setup_pxe \
-		ssh_install system-sanity update_live_macs wizard_prep
+        prep_oscar_repos repo-update set_node_nics set_oscar_interface \
+		setup_pxe ssh_install system-sanity update_live_macs wizard_prep \
+		c3_conf_manager
 SUBDIRS := cli system-sanity.d
 
 doc:
