[Torque] Still try to make things right for oscar-packager.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7789 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b04ae95c2f1d71d4440f6787285838076fe06be5

--- a/packages/torque/SRPMS/build.cfg
+++ b/packages/torque/SRPMS/build.cfg
@@ -1,9 +1,9 @@
 [rhel*:*:*]
 requires: tk-devel tcl-devel tclx-devel pam-devel
 common: torque --target noarch
-torque-2.1.8
+torque
 
 [*:*:*]
 requires: tk-devel tcl-devel pam-devel
 common: torque --target noarch
-torque-2.1.8
+torque
