[Torque OPKG] Update the list of prereqs for the creation of the binary packages (build.cfg).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7804 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2645a90bb609767262d8d19c640e6d2f0da3c1a7

--- a/packages/torque/SRPMS/build.cfg
+++ b/packages/torque/SRPMS/build.cfg
@@ -1,5 +1,5 @@
 [rhel*:*:*]
-requires: tk-devel tcl-devel tclx-devel pam-devel
+requires: tk-devel tcl-devel tclx-devel pam-devel gcc gcc-c++
 common: torque --target noarch
 torque
 
