--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -7,7 +7,7 @@ common: systemconfigurator
 udpcast
 requires: termcap pcre-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman
 common: systeminstaller-oscar
 requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
@@ -23,7 +23,7 @@ udpcast
 python-crypto-2.0-1.rf
 requires: libtermcap-devel pcre-devel pygtk2-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman
 common: systeminstaller-oscar
 bittorrent-4.2.2-1.rf --target noarch
 requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
@@ -39,7 +39,7 @@ udpcast
 python-crypto-2.0-1.rf
 requires: libtermcap-devel pcre-devel pygtk2-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman
 common: systeminstaller-oscar
 bittorrent-4.2.2-1.rf --target noarch
 requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
