Configurator prereq: add a missing data in a Makefile for its installation.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7819 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ba9fe0e3c5541d21c11191ab857e8050b164a35f

--- a/share/prereqs/Makefile
+++ b/share/prereqs/Makefile
@@ -2,7 +2,7 @@ SHAREDIR=usr/share/oscar/prereqs
 
 SUBDIRS := AppConfig packman perl-Qt perl-XML-Parser base \
 			OSCAR-Database perl-HTML-Tree perl-Tk perl-XML-Simple ORM \
-			Selector
+			Selector Configurator
 
 FILES := prereqs.order
 
