--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Package: oscar-bin
 Architecture: all
 Description: Binaries for OSCAR
  Set of binaries for OSCAR
+Depends: liboscar
 
 Package: liboscar
 Architecture: all
