This check-in fixes #502 - Binary packages for oscar-base do not over-write the /etc/oscar/oscar.conf file anymore (this check-in implements the RPM side, so now it works on both RPM and deb systems, we can close the ticket).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7823 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0a1e28ae9b2566852806088ed82ef634717e5ac8

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -48,7 +48,6 @@ make install DESTDIR=%{buildroot}
 mkdir -p %{buildroot}%{etcdir}
 mkdir -p %{buildroot}%{docdir}
 mkdir -p %{buildroot}%{sharedir}/images
-cp debian/etc/oscar.conf %{buildroot}%{etcdir}
 cp -f COPYING %{buildroot}%{docdir}
 cp -f README %{buildroot}%{docdir}
 cp -f VERSION %{buildroot}%{docdir}
@@ -60,6 +59,8 @@ cp -rf packages/oda/  %{buildroot}%{sharedir}/prereqs
 %clean
 rm -rf %{_tmppath}/%{name}-%{version}-root
 
+%post
+/usr/bin/oscar-config --generate-config-file
 
 %package client
 Group: Applications/System
