--- a/packages/ganglia/SRPMS/build.cfg
+++ b/packages/ganglia/SRPMS/build.cfg
@@ -11,7 +11,7 @@ ganglia
 [*:*:*]
 requires: php-devel
 requires: libpng-devel
-rrdtool-1.0.49-2
+rrdtool
 requires: ganglia:rrdtool
 common: ganglia --target noarch
 requires: libart_lgpl-devel
