--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -18,6 +18,7 @@ Group: 		Applications/System
 Source: 	%{name}-%{version}.tar.gz
 Requires: 	%{name}-base-lib == %{version}-%{release}
 Requires: 	%{name}-base-scripts == %{version}-%{release}
+Requires:	%{name}-base == %{version}-%{release}
 Requires: 	yum, createrepo, yume
 Vendor: 	OSCAR
 Distribution: 	OSCAR
