Add an "experimental" package set.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7967 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 34108a0baa0b9aa684d1d90b9bad547b5a2c2188

--- a/share/package_sets/Experimental/Makefile
+++ b/share/package_sets/Experimental/Makefile
@@ -1,19 +1,20 @@
-SHAREDIR=usr/share/oscar/package_sets
+NAME=Experimental
+SHAREDIR=usr/share/oscar/package_sets/$(NAME)
 
-SUBDIRS := Default Experimental
+SUBDIRS := 
 
-FILES := 
+FILES := debian-4-i386.xml 
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
 	install -d -m 0755 $(DESTDIR)/$(SHAREDIR)
-#	install    -m 0755 ${FILES} $(DESTDIR)/$(SHAREDIR)
+	install    -m 0755 ${FILES} $(DESTDIR)/$(SHAREDIR)
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-#	cd $(DESTDIR)/$(SHAREDIR); rm -f ${FILES}
+	cd $(DESTDIR)/$(SHAREDIR); rm -f ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
 
 clean:
