Finish the move the PackageSet Perl module to Selector.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8059 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 89a4c4375a90fbd7a7977c7796bbe403728de57a

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -11,7 +11,7 @@ FILES := AddNode.pm Help.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
          CmpVersions.pm MAC.pm PackageBest.pm SISBuildSetup.pm \
          PackageInUn.pm ConfigFile.pm PackagePath.pm SwitcherAPI.pm \
          ConfigManager.pm msm.pm SystemSanity.pm Package.pm Tk.pm \
-         Network.pm PackageSet.pm Utils.pm DelNode.pm \
+         Network.pm Utils.pm DelNode.pm \
          NextIp.pm VersionParser.pm Distro.pm NodeConfigManager.pm \
          PackageSmart.pm VMConfigManager.pm Env.pm NodeMgt.pm \
          PartitionConfigManager.pm  WizardEnv.pm FileUtils.pm OCA.pm \
