Update the makefile of the Experimental package set.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8069 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 8803ca858b923da835b86f23ac825db2e9b434b4

--- a/share/package_sets/Experimental/Makefile
+++ b/share/package_sets/Experimental/Makefile
@@ -3,7 +3,7 @@ SHAREDIR=usr/share/oscar/package_sets/$(NAME)
 
 SUBDIRS := 
 
-FILES := debian-4-i386.xml 
+FILES := debian-4-i386.xml debian-4-x86_64.xml rhel-5-i386.xml rhel-5-x86_64.xml
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
