Patch from Christophe Trophime: update the prereqs definition for FC9.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8091 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ac1089afea26bb889d21fcf1adc7f4b80d6f3edd

--- a/share/prereqs/AppConfig/prereq.cfg
+++ b/share/prereqs/AppConfig/prereq.cfg
@@ -1,4 +1,4 @@
-[mandriva*|redhat*|centos*|scientificlinux*:*:*]
+[mandriva*|redhat*|centos*|fedora*|scientificlinux*:*:*]
 perl-AppConfig
 
 [debian|ubuntu:*:*]
