--- a/share/prereqs/perl-Qt/prereq.cfg
+++ b/share/prereqs/perl-Qt/prereq.cfg
@@ -3,7 +3,7 @@ kdebindings3
 perl-Qt
 perl-Qt-compat-suse
 
-[mandriva*|redhat*|centos*|scientificlinux*:*:*]
+[fedora*|mandriva*|redhat*|centos*|scientificlinux*:*:*]
 perl-Qt
 
 [debian|ubuntu:*:*]
