Add the latest unit test to the associated Makefile.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8314 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2ae08ba4ab3aa5b01883775c505040ee71ab0530

--- a/testing/unit_testing/Makefile
+++ b/testing/unit_testing/Makefile
@@ -4,7 +4,8 @@ INSTALLDIR=/usr/share/oscar/testing/unit_testing
 SUBDIRS := etc samples
 SCRIPTS := test_config_file test_oscar_config test_systeminfo \
 		test_configxml test_prereqs test_distro_detection test_repo_prep \
-		test_network_utils test_image_mgt test_common_utils test_systemservice
+		test_network_utils test_image_mgt test_common_utils \
+		test_systemservice test_repo_detection 
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
