[apitest] Update the build.cfg config file (update FC data).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8392 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ed5865b00ecbd7fd28bd0ae099fdc00bec8a8a32

--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -9,10 +9,15 @@ python-twisted-1.3.0
 requires: apitest:python-twisted
 apitest --target noarch
 
-[rhel|fc:*:*]
+[rhel:*:*]
 requires: python-devel
 python-twisted-1.3.0
 requires: apitest:python-twisted
+apitest --target noarch
+
+[fc:*:*]
+requires: python-devel
+requires: python-twisted
 apitest --target noarch
 
 [*:*:*]
