[APITEST OPKG] Try to fix building issues with Fedora Core.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8393 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 09e5e60b64859d310295447b867d8c015de3fe7e

--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -18,6 +18,7 @@ apitest --target noarch
 [fc:*:*]
 requires: python-devel
 requires: python-twisted
+python-elementtree
 apitest --target noarch
 
 [*:*:*]
