Automatically execute oscar-packager when installing a new version of the oscar-base RPMs. That was already available for Debian packages so now we can concider it like a normal behavior for any oscar-base binary packages. Update the ChangeLog accordingly.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8397 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: aac0ca121a64b26197d9242763e5a7afeb507979

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -71,6 +71,7 @@ those packages from an online package repository, either on or off site.
 rm -rf %{_tmppath}/%{name}-%{version}-root
 %post -n oscar-base
 /usr/bin/oscar-config --generate-config-file
+/usr/bin/oscar-updater
 %files -n oscar-base
 %defattr(-,root,root)
 %dir %{etcdir}
