--- a/packages/torque/SRPMS/torque.cfg
+++ b/packages/torque/SRPMS/torque.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/torque-2.1.8-1oscar.src.rpm
+source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/torque-oscar-2.1.10-4.src.rpm
