--- a/packages/torque/SRPMS/build.cfg
+++ b/packages/torque/SRPMS/build.cfg
@@ -1,5 +1,5 @@
 [rhel*:*:*]
-requires: tk-devel tcl-devel tclx-devel pam-devel gcc gcc-c++
+requires: pam tk-devel tcl-devel tclx-devel pam-devel gcc gcc-c++
 common: torque --target noarch
 torque
 
