Update the build config file for Torque.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8526 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f22a07f77440850c40354fde995cc59aa2321927

--- a/packages/torque/SRPMS/build.cfg
+++ b/packages/torque/SRPMS/build.cfg
@@ -4,6 +4,6 @@ common: torque --target noarch
 torque
 
 [*:*:*]
-requires: tk-devel tcl-devel pam-devel
+requires: pam tk-devel tcl-devel tclx-devel pam-develgcc gcc-c++
 common: torque --target noarch
 torque
