Try to fix an ordering issue when installing binary packages for oscar-base.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8663 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e26653603fd301f6afb902b150eeccf33c4ea785

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -23,6 +23,7 @@ Requires: 	yum, createrepo, yume
 Vendor: 	OSCAR
 Distribution: 	OSCAR
 Packager: 	Geoffroy Vallee
+Requires:   perl-XML-Simple
 
 Buildroot: 	%{_tmppath}/%{name}-%{version}-root
 BuildArch: 	noarch
@@ -57,6 +58,7 @@ rm -rf %{_tmppath}/%{name}-%{version}-root
 Group: Applications/System
 Summary: Base OSCAR package
 AutoReqProv: no
+Requires: oscar-base-scripts == %{version}-%{release}
 %description -n oscar-base
 Base OSCAR package.
 OSCAR allows users, regardless of their experience level with a *nix
