--- a/share/etc/templates/oscar.conf
+++ b/share/etc/templates/oscar.conf
@@ -4,6 +4,7 @@ OSCAR_NETWORK_INTERFACE = eth0
 # options are 'file' where ODA uses as flat text file, or 'db' where ODA uses
 # a real database (i.e. mysql).
 ODA_TYPE = db
+DB_TYPE = mysql
 
 # PREREQ_MODE specifies the operation mode associated to the prereqs management.
 # Two modes are possible:
