Include the ssh_user_tests test script.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8707 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: bc8c8135e40fc1334741b4ba9b2b233113495ce6

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -2,7 +2,7 @@ DESTDIR=
 INSTALLDIR=/usr/share/oscar/testing/
 
 SUBDIRS := unit_testing
-SCRIPTS := run_unit_test testprint test_cluster
+SCRIPTS := run_unit_test testprint test_cluster ssh_user_tests
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
