Fix the prereqs regarding Scientific Linux configuration.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8986 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 8b176eabe05d2483b297f76538ebec8d62266bc9

--- a/share/prereqs/AppConfig/prereq.cfg
+++ b/share/prereqs/AppConfig/prereq.cfg
@@ -1,4 +1,4 @@
-[mandriva*|redhat*|centos*|fedora*|scientificlinux*:*:*]
+[mandriva*|redhat*|centos*|fedora*|scientific_linux*:*:*]
 perl-AppConfig
 
 [debian|ubuntu:*:*]
