--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -73,7 +73,7 @@ ntp
 sh: $OSCAR_HOME/scripts/system-sanity
 xmlstarlet
 
-[redhat*|centos*|scientificlinux*:*:*]
+[redhat*|centos*|scientific_linux*:*:*]
 dhcp
 gd
 nfs-utils
