--- a/share/prereqs/perl-Tk/prereq.cfg
+++ b/share/prereqs/perl-Tk/prereq.cfg
@@ -2,7 +2,7 @@
 perl-Tie-Watch
 perl-Tk
 
-[fedora*|mandriva*|redhat*|centos*|scientificlinux*:*:*]
+[fedora*|mandriva*|redhat*|centos*|scientific_linux*:*:*]
 perl-Tk
 
 [debian|ubuntu:*:*]
