Add a dependency to AppConfig for oscar-base.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8993 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3f6f94030439d8ba31b426c02f4547c173178f1e

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -24,6 +24,7 @@ Vendor: 	OSCAR
 Distribution: 	OSCAR
 Packager: 	Geoffroy Vallee
 Requires:   perl-XML-Simple
+Requires:   perl-AppConfig
 
 Buildroot: 	%{_tmppath}/%{name}-%{version}-root
 BuildArch: 	noarch
