Patch from Olivier Lahaye: include the partition file for CCISS controllers.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9037 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fb0916f4af266a8783f05362ba081487cd6adb2f

--- a/oscarsamples/Makefile
+++ b/oscarsamples/Makefile
@@ -17,7 +17,7 @@ FILES := debian-4-i386.rpmlist fc-5-i386.rpmlist fc-8-x86_64.rpmlist \
         redhat-el-5-i386.rpmlist redhat-el-5-x86_64.rpmlist \
 		centos-5-x86_64.rpmlist centos-5-i386.rpmlist \
         scientific_linux-5-i386.rpmlist scientific_linux-5-x86_64.rpmlist \
-        ubuntu-904-x86_64.rpmlist 
+        ubuntu-904-x86_64.rpmlist cciss.disk
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
