--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Description: Transitional package for OSCAR (server side)
 
 Package: oscar-base
 Architecture: all
-Depends: libappconfig-perl, oscar-bin, liboscar, oscar
+Depends: libappconfig-perl, oscar-bin, liboscar, oscar, perl
 Description: Transitional package for OSCAR (API side)
  This is a transitional package for OSCAR (API side).
 
