[OMPI] Patch from Olivier Delaye: modification for the support of ompi 1.4.1.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9207 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f63af73cd60f871e40e877d41d8ef1583b92e295

--- a/packages/openmpi/SRPMS/build.cfg
+++ b/packages/openmpi/SRPMS/build.cfg
@@ -5,6 +5,13 @@ common: openmpi-switcher-modulefile --target noarch
 requires: torque:torque
 openmpi --define "oscar 1" --define "_vendor OSCAR" --define "configure_options --with-tm=/opt/pbs"
 
+[rhel:4|5:*]
+requires: gcc-gfortran
+requires: switcher:modules-oscar
+common: openmpi-switcher-modulefile --target noarch
+requires: torque:torque
+openmpi --define "oscar 1" --define "_vendor OSCAR" --define "configure_options --with-tm=/opt/pbs"
+
 [*:*:*]
 requires: switcher:modules-oscar
 common: openmpi-switcher-modulefile --target noarch
