[OMPI] Continue modifications for the switch to openmpi-1.4.2.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9218 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: cf431a962a1c83955ee89ee1d9925222ed17f1b0

--- a/packages/openmpi/SRPMS/openmpi-switcher-modulefile.cfg
+++ b/packages/openmpi/SRPMS/openmpi-switcher-modulefile.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/openmpi-switcher-modulefile-1.1.1-1.src.rpm
+source = svn, http://svn.oscar.openclustergroup.org/svn/oscar/pkgsrc/opkg/openmpi/trunk/module
