--- a/packages/openmpi/SRPMS/build.cfg
+++ b/packages/openmpi/SRPMS/build.cfg
@@ -1,4 +1,11 @@
-[suse*:*:*]
+[fc:5|6|7|8:*]
+requires: switcher:modules-oscar
+common: openmpi-oscar --target noarch --define "configure_options FC=gfortran --with-tm=/opt/pbs"
+common: openmpi-switcher-module
+requires: torque:torque
+openmpi-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
+
+[sles|suse*:*:*]
 requires: gcc-fortran
 requires: switcher:modules-oscar
 common: openmpi-switcher-modulefile --target noarch
@@ -6,11 +13,16 @@ requires: torque:torque
 openmpi --define "oscar 1" --define "_vendor OSCAR" --define "configure_options --with-tm=/opt/pbs"
 
 [rhel:4|5:*]
-requires: gcc-gfortran
+requires: gcc-gfortran 
+# GV: when IB will be supported we will have to include the following
+#requires: blcr-devel libibverbs-devel
 requires: switcher:modules-oscar
-common: openmpi-switcher-modulefile --target noarch
+common: openmpi-oscar --target noarch --define "configure_options FC=gfortran --with-tm=/opt/pbs" --define "install_in_opt 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
+#common: openmpi-oscar --target noarch --define "configure_options FC=gfortran --with-tm=/opt/pbs --with-blcr=yes --with-ft=cr  --with-openib" --define "install_in_opt 1" --define "ofed 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
+common: openmpi-switcher-modulefile
 requires: torque:torque
-openmpi --define "oscar 1" --define "_vendor OSCAR" --define "configure_options --with-tm=/opt/pbs"
+openmpi-oscar --define "configure_options FC=gfortran --with-tm=/opt/pbs" --define "install_in_opt 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
+#openmpi-oscar --define "configure_options FC=gfortran --with-tm=/opt/pbs --with-blcr=yes --with-ft=cr --with-openib" --define "install_in_opt 1" --define "ofed 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
 
 [*:*:*]
 requires: switcher:modules-oscar
