This check-in fixes #591 - Add a dependency to syslinux to the oscar-base-scripts RPM.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9225 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b467b534a1a69fb3a1eab131276dd0f42fd05c37

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -120,6 +120,7 @@ Libraries for OSCAR clustering base package.
 Group: Applications/System
 Summary: Libraries for OSCAR clustering package.
 Requires: %{name}-base-lib == %{version}-%{release}
+Requires: syslinux
 AutoReqProv: no
 %description -n oscar-base-scripts
 Scripts for OSCAR clustering base package.
