Add the support of ubuntu-1004-x86_64.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9256 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: cac0c372c9804a863215a5921768a829f23f3a0a

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -153,7 +153,7 @@ libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
 perl-tk
-mysql-server-5.0
+mysql-server
 mysql-common
 nfs-kernel-server
 debootstrap
@@ -172,14 +172,14 @@ libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
 perl-tk
-mysql-server-5.0
+mysql-server
 mysql-common
 nfs-kernel-server
 debootstrap
 tcpdump
 xinetd
 xmlstarlet
-sh: $OSCAR_HOME/scripts/system-sanity
+sh: /usr/bin/system-sanity
 
 [sles:10:*]
 sqlite2
