Fix a problem previously introduced in the prereqs.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9272 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0a120279f36ad5c371476cc2fa52a54410da3830

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -179,7 +179,7 @@ debootstrap
 tcpdump
 xinetd
 xmlstarlet
-sh: /usr/bin/system-sanity
+sh: $OSCAR_HOME/scripts/system-sanity
 
 [sles:10:*]
 sqlite2
