--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -153,7 +153,7 @@ libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
 perl-tk
-mysql-server
+mysql-server-5.0
 mysql-common
 nfs-kernel-server
 debootstrap
@@ -163,6 +163,25 @@ xmlstarlet
 sh: $OSCAR_HOME/scripts/system-sanity
 
 [ubuntu:*:*]
+!tftpd
+apache2
+dhcp3-server
+dpkg-dev
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+perl-tk
+mysql-server-5.0
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
+[ubuntu:1004:*]
 !tftpd
 apache2
 dhcp3-server
