Make sure the Makefile does not try to install the c3_conf_manager script (which is not shipped with c3 as it should be).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9292 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b1b8fbe394b081580cebfb98a4d475dce69ef1df

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -7,7 +7,7 @@ SCRIPTS := create_and_populate_basic_node_info distro-query get_arch \
 		ping_clients post_clients post_install post_rpm_install prepare_repos \
         prep_oscar_repos repo-update set_node_nics set_oscar_interface \
 		setup_pxe ssh_install system-sanity update_live_macs wizard_prep \
-		c3_conf_manager oscar-updater
+		oscar-updater
 SUBDIRS := cli system-sanity.d oscar-updater.d
 
 doc:
