Update the list of base prereqs for RHEL 5 systems.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9370 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9854c90ed3e18857875bcc1f1fb2839b22daa5ef

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -92,6 +92,9 @@ zlib-devel
 shadow-utils
 libcap
 ntp
+php-gd
+php-mysql
+php-mbstring
 !tftp-server.$arch
 !lam
 sh: $OSCAR_HOME/scripts/system-sanity
