Update the list of base prereqs for Debian.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9371 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 490b4fb057f800b8bd62391dd8962591456709ad

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -156,6 +156,25 @@ libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
 perl-tk
+mysql-server-5.0
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
+[debian:6:*]
+!tftpd
+apache2
+dhcp3-server
+dpkg-dev
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+perl-tk
 mysql-server-5.1
 mysql-common
 nfs-kernel-server
@@ -193,6 +212,7 @@ libdbi-perl
 libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
+mysql-server-5.1
 perl-tk
 mysql-server
 mysql-common
