For the base prereqs, the block for Debian based systems were in the wrong order.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9372 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 24588ce3f8a04e61a8560c40671399b81d72848f

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -184,25 +184,6 @@ xinetd
 xmlstarlet
 sh: $OSCAR_HOME/scripts/system-sanity
 
-[ubuntu:*:*]
-!tftpd
-apache2
-dhcp3-server
-dpkg-dev
-libdbi-perl
-libdbd-mysql-perl
-libmldbm-perl
-libxml-simple-perl
-perl-tk
-mysql-server-5.0
-mysql-common
-nfs-kernel-server
-debootstrap
-tcpdump
-xinetd
-xmlstarlet
-sh: $OSCAR_HOME/scripts/system-sanity
-
 [ubuntu:1004:*]
 !tftpd
 apache2
@@ -215,6 +196,47 @@ libxml-simple-perl
 mysql-server-5.1
 perl-tk
 mysql-server
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
+[ubuntu:1010:*]
+!tftpd
+apache2
+dhcp3-server
+dpkg-dev
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+mysql-server-5.1
+perl-tk
+mysql-server
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
+# It is important to leave the generic block AFTER the specific ones.
+# For instance, [ubuntu:*:*] should be AFTER [ubuntu:1004:*]
+[ubuntu:*:*]
+!tftpd
+apache2
+dhcp3-server
+dpkg-dev
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+perl-tk
+mysql-server-5.0
 mysql-common
 nfs-kernel-server
 debootstrap
