This check-in fixes #601 - We do not need to specify the version of mysql-server in the base prereqs on Debian, the meta-package provided by the distro seems to be fixed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9390 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a5155d3eb7d806ee1cff6dab506efc2acb54bc20

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -156,7 +156,7 @@ libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
 perl-tk
-mysql-server-5.0
+mysql-server
 mysql-common
 nfs-kernel-server
 debootstrap
@@ -175,7 +175,7 @@ libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
 perl-tk
-mysql-server-5.1
+mysql-server
 mysql-common
 nfs-kernel-server
 debootstrap
@@ -193,9 +193,8 @@ libdbi-perl
 libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
-mysql-server-5.1
-perl-tk
 mysql-server
+perl-tk
 mysql-common
 nfs-kernel-server
 debootstrap
@@ -213,9 +212,8 @@ libdbi-perl
 libdbd-mysql-perl
 libmldbm-perl
 libxml-simple-perl
-mysql-server-5.1
-perl-tk
 mysql-server
+perl-tk
 mysql-common
 nfs-kernel-server
 debootstrap
