Add a package for development (oscar-devel on RPM based systems and oscar-dev on Debian based systems). + Clean-up a little the Debian package.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9402 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 986986eda134bacbf695465308428df528c7859d

--- a/debian/control
+++ b/debian/control
@@ -43,3 +43,9 @@ Package: oscar-base-client
 Architecture: all
 Description: Transitional package for OSCAR (client side)
  This is a transitional package for OSCAR (client side).
+
+Package: oscar-dev
+Architecture: all
+Depends: oscar-base, opkgc (>= 0.6.0), packman (>= 3.2.0)
+Description: Everything needed for OSCAR related developments
+ Everything needed for OSCAR related developments.
