Update the list of yume prereqs on some RPM based distros (for the support of Scientific Linux 6).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9438 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 321b952d1bc7d149685a0e7700c3391fe9c457f1

--- a/packages/yume/prereq.cfg
+++ b/packages/yume/prereq.cfg
@@ -22,6 +22,13 @@ yum
 createrepo
 yume
 
+[redhat*:6:*]
+perl-IO-Tty
+python-urlgrabber
+yum
+createrepo
+yume
+
 # FC3's yum is too old, remove it and use yum-oscar
 [fedora:3:*]
 perl-IO-Tty
@@ -68,7 +75,7 @@ yum
 createrepo
 yume
 
-[scientific*:*:*]
+[scientific*:4|5:*]
 perl-IO-Tty
 urlgrabber
 python-elementtree
