Update a few configuration files for the support of Scientific Linux 6.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9439 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 192d44b4001fb261d2bfd11b73b36ddd6d3e18af

--- a/packages/yume/prereq.cfg
+++ b/packages/yume/prereq.cfg
@@ -75,9 +75,16 @@ yum
 createrepo
 yume
 
-[scientific*:4|5:*]
+[scientific*:6:*]
 perl-IO-Tty
-urlgrabber
+python-urlgrabber
+yum
+createrepo
+yume
+
+[scientific*:*:*]
+perl-IO-Tty
+python-urlgrabber
 python-elementtree
 yum
 createrepo
