Update some OSCAR RPM macros.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9443 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 585ad314da886043bc4280ecc2f6ec7e20a87799

--- a/rpm/macros.oscar.in
+++ b/rpm/macros.oscar.in
@@ -1,9 +1,13 @@
 # Root of oscar RPMS.
 
-%oscar_version_major    VERSION_MAJOR
-%oscar_version_minor    VERSION_MINOR
-%oscar_version_release  VERSION_RELEASE
-%oscar_version_svn  VERSION_SVN
+#%oscar_version_major    VERSION_MAJOR
+%oscar_version_major    %(/usr/bin/get-oscar-version.sh /etc/oscar/VERSION --major)
+#%oscar_version_minor    VERSION_MINOR
+%oscar_version_minor    %(/usr/bin/get-oscar-version.sh /etc/oscar/VERSION --minor)
+#%oscar_version_release  VERSION_RELEASE
+%oscar_version_release  %(/usr/bin/get-oscar-version.sh /etc/oscar/VERSION --release)
+#%oscar_version_svn      VERSION_SVN
+%oscar_version_svn      %(/usr/bin/get-oscar-version.sh /etc/oscar/VERSION --svn)
 
 %manpref        /usr/local/man/man1
 
