Patch from Olivier Lahaye for the support of CentOS 6.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9446 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 74c0119492a4d990c6a0bd21f4b56ddb1712392c

--- a/packages/yume/prereq.cfg
+++ b/packages/yume/prereq.cfg
@@ -67,10 +67,17 @@ yum
 createrepo
 yume
 
-[centos*:*:*]
+[centos*:4|5:*]
 perl-IO-Tty
 python-urlgrabber
 python-elementtree
+yum
+createrepo
+yume
+
+[centos*:6:*]
+perl-IO-Tty
+python-urlgrabber
 yum
 createrepo
 yume
