--- a/share/package_sets/Experimental/Makefile
+++ b/share/package_sets/Experimental/Makefile
@@ -3,8 +3,11 @@ SHAREDIR=usr/share/oscar/package_sets/$(NAME)
 
 SUBDIRS := 
 
-FILES := debian-4-i386.xml debian-4-x86_64.xml rhel-5-i386.xml \
-		rhel-5-x86_64.xml debian-5-x86_64.xml
+FILES :=	debian-4-i386.xml debian-4-x86_64.xml \
+		                  debian-5-x86_64.xml \
+		rhel-4-i386.xml   rhel-4-x86_64.xml \
+		rhel-5-i386.xml   rhel-5-x86_64.xml \
+		rhel-6-i386.xml   rhel-6-x86_64.xml
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
