--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -9,7 +9,14 @@ python-twisted-1.3.0
 requires: apitest:python-twisted
 apitest --target noarch
 
-[rhel:*:*]
+[rhel:3|4|5:*]
+requires: python-devel
+requires: python-elementtree
+python-twisted-1.3.0
+requires: apitest:python-twisted
+apitest --target noarch
+
+[rhel:6:*]
 requires: python-devel
 python-twisted-1.3.0
 requires: apitest:python-twisted
