Fix a few issues in some rpmlist files + add a rpmlist file for ubuntu 12.04 x86_64
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9480 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 14858731919d19aedc5f3b65689e2a8f973b2513

--- a/oscarsamples/Makefile
+++ b/oscarsamples/Makefile
@@ -18,8 +18,8 @@ FILES := debian-4-i386.rpmlist fc-5-i386.rpmlist fc-8-x86_64.rpmlist \
 		centos-5-x86_64.rpmlist centos-5-i386.rpmlist \
         centos-6-x86_64.rpmlist centos-6-i386.rpmlist \
         scientific_linux-5-i386.rpmlist scientific_linux-5-x86_64.rpmlist \
-        scientific_linux-6-i386.rpmlist scientific_linux-6-x86_64.rpmlist \
-        ubuntu-904-x86_64.rpmlist cciss.disk ubuntu-1004-x86_64.rpmlist
+        ubuntu-904-x86_64.rpmlist cciss.disk ubuntu-1004-x86_64.rpmlist \
+        ubuntu-1204-x86_64.rpmlist
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
