Fix a dependency issue for the Ubuntu 12.04 support.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9484 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 8196418969bfdc05675aa9d1fbe0c58a3c77352e

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -222,6 +222,25 @@ xinetd
 xmlstarlet
 sh: $OSCAR_HOME/scripts/system-sanity
 
+[ubuntu:1204:*]
+!tftpd
+apache2
+dhcp3-server
+dpkg-dev
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+mysql-server
+perl-tk
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
 # It is important to leave the generic block AFTER the specific ones.
 # For instance, [ubuntu:*:*] should be AFTER [ubuntu:1004:*]
 [ubuntu:*:*]
