--- a/share/prereqs/perl-Qt/prereq.cfg
+++ b/share/prereqs/perl-Qt/prereq.cfg
@@ -6,5 +6,8 @@ perl-Qt-compat-suse
 [fedora*|mandriva*|redhat*|centos*|scientific_linux*:*:*]
 perl-Qt
 
+[ubuntu:1204:*]
+libqtgui4-perl
+
 [debian|ubuntu:*:*]
 libqt-perl
