Generate a set of new Debian packages to fix a reported problem (missing dependency).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9513 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 65564492db99dadf65e42bf6795332a529b296d3

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2.2
 
 Package: oscar
 Architecture: all
-Depends: c-shell | tcsh, liboscar, oscar-bin
+Depends: c-shell | tcsh, liboscar, oscar-bin, libappconfig-perl 
 Description: Open Source Cluster Application Resources
  OSCAR (Open Source Cluster Application Resources) is a snapshot of the best 
  known methods for building, programming, and using High Performance Computing
